[project]
name = "stresspoes"
version = "0.1.0"
description = "Stress testing and benchmarking OpenKAT's Octopoes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "dill>=0.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.11.4",
    "term-image>=0.7.2",
    "xxhash>=3.5.0",
    "zstandard>=0.23.0",
]
